--- a/style.css
+++ b/style.css
@@ -1,52 +1,32 @@
-html,body{
-  height: 100%;
-  width: 100%;
-  font-family: fantasy;
+body{
+	text-align: center;
+	text-transform: uppercase;
+	margin-top: 100px;
+	font: 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
+    letter-spacing: .5em;
+    background: linear-gradient(to right,rgb(89, 239, 255), rgb(230, 0, 0));
 }
 
 
-.p-2{
-  background-color: grey;
-}
 
-.startup{
-  background-position: center;
-  background-image: url("header.jpg");
-  background-size: cover;
-  height: 100%;
-}
 
 h1{
-  font-size: 2rem;
+	font-size: 3em;
+	font-family: fantasy;
 }
 
-.btn-xl {
-  padding: 1rem 2rem; 
+h2{
+	font-size: 2rem;
 }
 
-
-hr{
-  margin-top: 200px;
-  background-color: #F05F44;
-  width: 50px;
-  height: 2px;
-  margin-bottom: 20px;
+h3 {
+	font-size: 1.3rem;
+	text-transform: capitalize;
+	letter-spacing: .1em;
 }
 
-.btn{
-    border-radius: 300px;
-
-}
-
-.btn-primary{
-  
-  background-color: #F05F44;
-  border-color: #F05F44;
-}
-
-.btn-primary:hover {
-   background-color: #ee4b08;
-   border-color: #ee4b08;
-   border-width: 5px;
-   cursor: pointer;
+#c1, #c2{
+	border: 1px ridge black;
+	border-radius: 8px;
 }
